@@ -13,6 +13,7 @@ import com.yahoo.vespa.hosted.provision.NodeList;
 import com.yahoo.vespa.hosted.provision.node.Allocation;
 import com.yahoo.vespa.hosted.provision.node.Generation;
 import com.yahoo.vespa.hosted.provision.node.History;
+import com.yahoo.vespa.hosted.provision.node.IP;
 import com.yahoo.vespa.hosted.provision.node.Reports;
 import com.yahoo.vespa.hosted.provision.node.Status;
 
@@ -80,10 +81,10 @@ public class AllocationSimulator {
     }
 
     private Node node(String hostname, Flavor flavor, Optional<String> parent, Optional<String> tenant) {
-        return new Node("fake", Collections.singleton("127.0.0.1"),
-                parent.isPresent() ? Collections.emptySet() : getAdditionalIP(), hostname, parent, flavor, Status.initial(),
-                parent.isPresent() ? Node.State.ready : Node.State.active, allocation(tenant), History.empty(),
-                parent.isPresent() ? NodeType.tenant : NodeType.host, new Reports(), Optional.empty());
+        var ipConfig = new IP.Config(Set.of("127.0.0.1"), parent.isPresent() ? Set.of() : getAdditionalIP());
+        return new Node("fake", ipConfig, hostname, parent, flavor, Status.initial(),
+                        parent.isPresent() ? Node.State.ready : Node.State.active, allocation(tenant), History.empty(),
+                        parent.isPresent() ? NodeType.tenant : NodeType.host, new Reports(), Optional.empty());
     }
 
     private Set<String> getAdditionalIP() {
